2014-09-23  Per Bothner  <per@bothner.com>

	* Compilation.java (info): Remove field, replace by ...
	(getMinfo): New method - uses the info field in ModuleExp.

	* LambdaExp.java (allocChildMethods): Don't call allocMethod on
	child - instead do it lazily.  This avoids an inconsistency where
	the Code attribute is created lazily, and fixes
	Savannah bug #42382 "Assigned but unused argument".
	(compileAsMethod): Call allocMethod if needed.

2014-09-23  Per Bothner  <per@bothner.com>

	* ScopeExp.java (outer): Make private.
	(getOuter, setOuter): New accessor methods.

2014-09-17  Per Bothner  <per@bothner.com>

	* LitTable.java (emit): If a cycle is seen, look for an "init"
	method before checked for a "set" method.  The former is more
	appropriate for immutable-after-initialization methods.
	This fixes Savannah bug 43233 "Dumping circular literals".

2014-09-15  Per Bothner  <per@bothner.com>

	* BindingInitializer.java (emit): Use new Location.define method
	for simple "semi-dynamic" top-level variabls.

2014-09-10  Per Bothner  <per@bothner.com>

	* BindingInitializer.java: Update for new DynamicLocation class.
	* Language.java (declFromField): Likewise.
	* BuiltinEnvironment.java (lookup): Simplify - check for
	ANONYMOUS property doesn't appear to be used.

2014-08-31  Per Bothner  <per@bothner.com>

	* Makefile.am: Merge in gnu/Makefile.am.

2014-08-28  Per Bothner  <per@bothner.com>

	* StackTarget.java (compileFromStack0): Use Type#isCompatibleWithValue
	with new return code to check if conversion is needed.
	* ConsumerTarget.java (type): New field.
	(<init>): Update accordingly.
	(getSingleTarget): New method.
	(makeContextTarget): Take result type.
	(compileUsingConsumer): Use more precise typing.
	(compileFromStack): First convert to target type.
	(compileWrite): Convert as needed.
	* InlineCalls.java (checkType): On type error involving PrimTypes,
	coerced to boxing of required type, not expression type. The former